--- a/lzc-deploy-params.yml
+++ b/lzc-deploy-params.yml
@@ -2,13 +2,13 @@ params:
     - id: auth_user
       type: string
       name: "auth user"
-      default: "admin"
+      default_value: "admin"
       description: "user name for login"
 
     - id: auth_pass
       type: string
       name: "user password"
-      default: "admin"
+      default_value: "admin"
       description: "user password for login"
 
 locales:
